[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameEasy.gd" type="Script" id=1]
[ext_resource path="res://art/imgBorel/on.png" type="Texture" id=2]
[ext_resource path="res://art/icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/phonetic.tres" type="Theme" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 4 )

[node name="ImgBorel" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer/ImgBorel"]
margin_right = 1024.0
margin_bottom = 110.0
theme = ExtResource( 4 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 1024.0
margin_bottom = 178.0
theme = ExtResource( 4 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Number" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 244.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Word" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 244.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Speak" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 316.0
theme = ExtResource( 4 )
text = "Speak"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 388.0
theme = ExtResource( 4 )
text = "Enregistrer"

[node name="Back" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 4 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -68.0
theme = ExtResource( 4 )
text = "Suivant"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
